platform/staging/istio.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: istio-system # TODO dedicated namespace?
spec:
  gatewayClassName: istio
  listeners:
  - name: default
    hostname: "*.staging.lajas.tech" # TODO make this var/configurable
    port: 80 # TODO HTTPS by default, only use HTTP for ACME HTTP-01
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
